# sentinel

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
notebooks/final_results/: official_erratic_failure_results.ipynb  official_pusht_results.ipynb  official_real_world_results.ipynb  official_task_progression_failure_results.ipynb  official_video_results.ipynb  results.py
scripts/data_generation/: compute_rollout_actions_mobile.sh  compute_rollout_actions_pusht.sh  compute_rollout_actions_real.sh
scripts/download/: download_checkpoints.sh  download_datasets.sh
scripts/eval_detector/: evaluate_ood_detectors_mobile.sh  evaluate_ood_detectors_pusht.sh  evaluate_ood_detectors_real.sh
sentinel/: __init__.py
sentinel/bc/: compute_rollout_actions.py  compute_rollout_actions_real.py  evaluate_ood_detectors.py  utils.py
sentinel/bc/agents/: dp_agent.py  sim3_agent.py  sim3_dp_agent.py
sentinel/bc/configs/: base.yaml  close_mobile_dp.yaml  close_mobile_equivact.yaml  close_mobile_sim3_dp.yaml  close_real.yaml  cover_mobile_dp.yaml  cover_mobile_equivact.yaml  cover_mobile_sim3_dp.yaml  cover_real_sim3_dp_ddim.yaml  fold_mobile_dp.yaml  fold_mobile_equivact.yaml  fold_mobile_sim3_dp.yaml  pusht_synthetic_dp_aug.yaml  pusht_synthetic_equivact.yaml  pusht_synthetic_sim3_dp.yaml  (+13 more)
sentinel/envs/: __init__.py  subproc_vec_env.py  vec_env.py
sentinel/point_feat/: .gitignore  visualize.py  visualize_video.py
sentinel/utils/: args.py  depth_to_3d.py  media.py  norm.py  pointnet.py  process_real_pc.py  resnet.py  transformations.py  vis_points.py  zed.py
(+101 files in other folders)
