[tool.poetry]
name = "sentinel"
version = "0.1.0"
description = "Failure detection for generative robot policies."
authors = ["Christopher Agia <cagia@cs.stanford.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-contrib-python = "4.7.0.72"
moviepy = "1.0.3"
scikit-video = "1.1.11"
pybullet = "3.2.5"
attrdict = "^2.0.1"
scikit-learn = "1.0.2"
einops = "0.7.0"
diffusers = "0.23.0"
openai = "^1.13.3"
pygame = "^2.5.2"
pymunk = "^6.6.0"
shapely = "^2.0.3"
protobuf = "3.20.0"
toppra = "^0.6.0"
pyusb = "^1.2.1"
black = "^24.3.0"
flake8 = "^7.0.0"
jupyter = "^1.0.0"
plotly = "^5.20.0"
usort = "^1.0.8.post1"
imageio = "^2.34.0"
fvcore = "^0.1.5.post20221221"
iopath = "^0.1.10"
open3d = "^0.18.0"
addict = "^2.4.0"
pandas = "^2.2.1"
gtimer = "^1.0.0b5"
trimesh = "^4.3.1"
manifold3d = "^2.4.5"
anthropic = "^0.45.2"
transformers = "4.40.2"
wandb = "0.16.4"
gym = "0.26.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
